FORCE: Add timestamp to index.html to trigger file upload

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
     <script>
       // Set the document title to ensure it displays correctly
       document.title = "Your neighborhood operating system";
+      // Force deployment timestamp: 2025-09-27 12:15 PM
+      console.log('Build timestamp: 2025-09-27 12:15 PM');
     </script>
   </body>
 </html>
